# DiffusionU-NetLLM

./: .gitignore  README.md  pyproject.toml
configs/: eval.yaml
src/: demo.ipynb  eval.py  llm_objects.py
src/detectors/: owlvitv2.py
src/diffusion_models/: __init__.py  stablediffusionxl_pipeline.py
src/editing/: __init__.py  attention_processor.py  edits.py  show_attention.py
src/utils/: __init__.py  detection.py
