[tool.poetry]
name = "diffusionu_netllm"
version = "0.1.0"
description = ""
authors = ["Andrey Palaev <palaev@aidecisions.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl"}
transformers = "^4.34.0"
diffusers = "^0.21.4"
accelerate = "^0.23.0"
numpy = "1.26.4"
inflect = "^7.0.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1.post1"
scipy = "^1.11.3"
pandas = "^2.2.2"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"